Stop hiding the GROUNDSOURCE text on mobile. Set description width to 100% so that the containing text is centered.

--- a/src/app/about.scss
+++ b/src/app/about.scss
@@ -156,7 +156,7 @@
       }
 
       .description {
-        width: 90%;
+        width: 100%;
         font-size: 3em;
         padding-top: 0;
         .head-title {
