--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -444,10 +444,6 @@ a {
     width: 33%;
   }
 
-  .small-hidden {
-    display: none;
-  }
-
   .services-img {
     display: none;
   }
